fix: update delete button hover state for improved visibility - Resolves #70

--- a/src/components/features/global/view/delete/delete.module.css
+++ b/src/components/features/global/view/delete/delete.module.css
@@ -10,6 +10,7 @@
 }
 .delete:hover {
   background-color: var(--error-color);
+  color: var(--background-color);
 }
 .title {
   display: flex;
